# simple_viewer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h
include/: utils.h
shader/: fragment_shader.fs  vertex_shader.vs
